fix DT-1206, fix for nav on IE11

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -196,6 +196,9 @@ body {
 // Navigation
 
 .bk-nav {
+	clear: both;
+	height: 100%;
+	overflow: visible;
 	background: @color-swatch7;
 	background: -moz-linear-gradient(top,  lighten(@color-swatch7, 8%), @color-swatch7, darken(@color-swatch7, 9%) 100%);
 	background: -webkit-gradient(linear, left top, left bottom, lighten(@color-swatch7, 8%), @color-swatch7, darken(@color-swatch7, 9%) 100%);
@@ -355,6 +358,7 @@ body {
 		width: 40px;
 	}
 }
+
 
 // Feature 
 
